Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <div class="container">
         <h1>LCD Pi Plate</h1>
-        <h2>Pi Plate: Serving you delicious information, the easy way</h2>
+        <h2>Pi Plate: Serving you delicious information, the Raspberry Pi way</h2>
 
         <section id="downloads">
           <a href="https://github.com/devo8604/LCDPiPlate/zipball/master" class="btn">Download as .zip</a>
